# integran

./: .env.example  .env.test  .gitignore  Dockerfile  LICENSE  Makefile  README.md  processing_log.txt  pyproject.toml  test_explanations.py
.gitea/workflows/: ci.yml
.github/: CI_README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
data/: direct_extraction.json  explanations.json  explanations_checkpoint.json  extraction_checkpoint.json  failed_questions_log.txt  questions.csv  step1_images_extracted.json  step2_answers_fixed.json  test_checkpoint.json  test_explanations.json
data/knowledge_base/raw/: content_cache.json
data/review_for_upload/: image_questions.csv  main_content.csv  multilingual_content.csv  wrong_answers.csv
data/vector_store/: chroma.sqlite3
docs/: dataset-generation-guide.md  developer-guide.md  integration_exam_research.md  questions.csv  repetition.md  review-process-guide.md
scripts/: analyze_image_pages.py  create_working_dataset.py  export_for_review.py  extract_images.py  finalize_dataset.py  fix_image_answers.py  generate_explanations.py  generate_explanations_single.py  import_from_review.py  monitor_extraction.py  monitor_progress.py  preflight_check.py  process_all_explanations.sh  update_dataset_with_images.py  verify_dataset.py
src/: __init__.py  direct_pdf_processor.py  extract_questions.py  main.py  setup.py  trainer.py
src/application_services/analytics/: __init__.py
src/application_services/analytics/handlers/: __init__.py
src/application_services/content/: content_builder_service.py  legacy_data_builder.py
src/application_services/learning/: __init__.py  session_manager.py
src/application_services/learning/handlers/: __init__.py
src/application_services/setup/: database_setup_service.py
src/cli/: __init__.py  backup_data.py  build_dataset.py  build_knowledge_base.py  direct_extract.py  generate_explanations.py
src/core/: __init__.py  answer_engine.py  data_builder.py  database.py  domain_events.py  domain_service.py  event_bus.py  fsrs_scheduler.py  image_processor.py  interleaving_manager.py  leech_detector.py  models.py  progress_analytics.py  session_manager.py  settings.py
src/core/learning/: __init__.py
src/core/learning/domain/: __init__.py
src/core/learning/domain/events/: __init__.py  card_events.py
src/core/learning/domain/services/: schedule_card.py
src/domain/analytics/events/: __init__.py  analytics_events.py
src/domain/analytics/models/: __init__.py  analytics_models.py
src/domain/analytics/services/: __init__.py  analyze_performance.py  detect_leech.py  optimize_interleaving.py
src/domain/content/events/: content_events.py
src/domain/content/models/: answer_models.py  question_models.py
src/domain/content/services/: create_image_mapping.py  generate_answer.py  process_image.py
src/domain/learning/events/: card_events.py
src/domain/learning/models/: __init__.py  learning_models.py
src/domain/learning/services/: __init__.py  schedule_card.py
src/domain/shared/: events.py  models.py  services.py
src/infrastructure/config/: settings.py
src/infrastructure/containers/: __init__.py  content_container.py
src/infrastructure/database/: database.py
src/infrastructure/messaging/: event_bus.py
src/infrastructure/processors/: pdf_processor.py
src/infrastructure/repositories/: __init__.py  content_repository.py
src/knowledge_base/: __init__.py  content_fetcher.py  firecrawl_fetcher.py  rag_engine.py  text_splitter.py  vector_store.py
src/presentation/cli/: backup_data.py  build_dataset.py  direct_extract.py
src/ui/: __init__.py
src/utils/: __init__.py  explanation_generator.py  gemini_client.py  pdf_extractor.py  question_loader.py
tests/: README.md  __init__.py  conftest.py  test_cli_generate_explanations.py  test_content_fetcher.py  test_database.py  test_explanation_generator.py  test_gemini_client.py  test_main.py.disabled  test_models.py  test_pdf_extractor.py  test_settings.py  test_setup.py  test_setup.py.disabled  test_trainer.py  test_vector_store.py
tests/integration/: test_cli_integration.py  test_dataset_building.py  test_single_extraction.py
tests/unit/analytics/: __init__.py  test_analytics_container.py.disabled  test_analytics_events.py
tests/unit/application_services/: test_database_setup_service.py
tests/unit/cli/: test_cli_build_dataset.py  test_cli_build_knowledge_base.py
tests/unit/content/: test_content_domain_models.py  test_content_models.py
tests/unit/core/: test_answer_engine.py  test_answer_engine_validation.py  test_data_builder.py  test_data_builder_validation.py  test_database.py  test_ddd_infrastructure.py  test_domain_events.py  test_domain_service.py  test_event_bus.py  test_fsrs_scheduler.py  test_image_mapping_validation.py  test_image_processor.py  test_interleaving_manager.py  test_interleaving_manager.py.disabled  test_leech_detector.py  test_leech_detector.py.disabled  test_models.py  test_progress_analytics.py  test_progress_analytics.py.disabled  test_session_manager.py  test_session_manager.py.disabled  test_settings.py
tests/unit/domain/: test_shared_models.py
tests/unit/domain/learning/: __init__.py
tests/unit/domain/learning/events/: __init__.py  test_card_events.py
tests/unit/domain/shared/: test_models.py  test_services.py
tests/unit/infrastructure/: test_content_container.py.disabled  test_content_repository.py  test_database_manager.py  test_event_bus.py  test_settings.py
tests/unit/infrastructure/messaging/: test_event_bus.py
tests/unit/knowledge_base/: test_firecrawl_fetcher.py  test_rag_engine.py  test_text_splitter.py
tests/unit/learning/: __init__.py  test_card_events.py
tests/unit/learning/domain/: __init__.py
tests/unit/learning/domain/services/: __init__.py  test_schedule_card.py
tests/unit/utils/: test_gemini_client.py  test_question_loader.py  test_question_loader_simple.py
