[project]
name = "integran"
version = "0.1.0"
description = "Interactive terminal-based trainer for the German Integration Exam"
authors = [{name = "Jaigouk Kim", email = "ping@jaigouk.kim"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["german", "integration", "exam", "trainer", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.7.0",
    "click>=8.1.7",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    # RAG dependencies (LangChain-free)
    "firecrawl-py>=0.0.16",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.1.11",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.19.0",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
all = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.1.11",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.19.0",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
integran = "src.trainer:main"
integran-setup = "src.setup:main"
integran-extract-questions = "src.extract_questions:main"
integran-generate-explanations = "src.cli.generate_explanations:main"
integran-build-kb = "src.cli.build_knowledge_base:main"

[project.urls]
Homepage = "https://github.com/jaigouk/integran"
Repository = "https://github.com/jaigouk/integran"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlalchemy.*",
    "firecrawl.*",
    "chromadb.*",
    "sentence_transformers.*",
    "google.genai.*",
    "pypdf.*",
    "pymupdf.*",
    "bs4.*",
]
ignore_missing_imports = true

# Disable specific error codes for database module due to SQLAlchemy ORM complexity
[[tool.mypy.overrides]]
module = "src.core.database"
disable_error_code = ["assignment", "call-overload", "return-value", "arg-type", "misc"]

# Disable type checking for modules with complex external library interactions
[[tool.mypy.overrides]]
module = [
    "src.knowledge_base.*",
    "src.utils.explanation_generator",
    "src.utils.gemini_client", 
    "src.utils.pdf_extractor",
    "src.setup",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/extract_questions.py",  # Developer-only PDF extraction tool
    "*/utils/pdf_extractor.py",  # Developer-only PDF extraction utility
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]